# bearborg-jupyter-ai

./: LICENSE  README.md  pyproject.toml
bearborg_ai/: __init__.py  provider.py  spend.py
bearborg_ai/tests/: __init__.py
jupyter_ai_cborg/: provider.py  spend.py
jupyter_ai_cborg/tests/: __init__.py
