[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab~=4.0"]
build-backend = "hatchling.build"

[project]
name = "bearborg_ai"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
version = "0.1.0"
description = "A Jupyter AI extension for BearBorg."
authors = [
    { name = "Rick McGeer", email = "mcgeer@berkeley.edu" },
]
dependencies = ["jupyter_ai", "langchain_openai"]

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]

[project.entry-points."jupyter_ai.model_providers"]
bearborg-chat = "bearborg_ai.provider:BearBorgChatProvider"

[project.entry-points."jupyter_ai.chat_handlers"]
bearborg-spend-slash-command = "bearborg_ai.spend:BearBorgSpendSlashCommand"

[project.entry-points."jupyter_ai.embeddings_model_providers"]
bearborg-embeddings = "bearborg_ai.provider:BearBorgEmbeddingsProvider"

[tool.hatch.build.hooks.version]
path = "bearborg_ai/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]
